// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionWrapper should render expanded data 1`] = `
<div>
  <div>
    <span
      className="expand"
      onClick={[Function]}
    >
      <span>
        Some children
      </span>
    </span>
  </div>
  <div
    className="expanded-content"
  >
    <table>
      <tbody>
        <tr>
          <td>
            <Connect(Translate)>
              Query
            </Connect(Translate)>
          </td>
          <td
            className="tdquery"
          >
            Long text for query
          </td>
        </tr>
        <tr>
          <td>
            <Connect(Translate)>
              Body
            </Connect(Translate)>
          </td>
          <td
            className="tdbody"
          >
            Very complex body text
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DescriptionWrapper should render extra info when expanded and beautified 1`] = `
<div>
  <div>
    <span
      className="expand"
      onClick={[Function]}
    >
      <span>
        Some children
      </span>
    </span>
  </div>
  <div
    className="expanded-content"
  >
    <table>
      <tbody>
        <tr>
          <td>
            <Connect(Translate)>
              Route
            </Connect(Translate)>
          </td>
          <td>
            POST, PUT or DELETE
             : 
            /api/route/called
          </td>
        </tr>
        <tr>
          <td>
            <Connect(Translate)>
              Query
            </Connect(Translate)>
          </td>
          <td
            className="tdquery"
          >
            Long text for query
          </td>
        </tr>
        <tr>
          <td>
            <Connect(Translate)>
              Body
            </Connect(Translate)>
          </td>
          <td
            className="tdbody"
          >
            Very complex body text
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DescriptionWrapper should render the component with correct children 1`] = `
<div>
  <div>
    <span
      className="expand"
      onClick={[Function]}
    >
      <span>
        Some children
      </span>
    </span>
  </div>
</div>
`;
